# DeptSplit-SG-A-Automation

./: .gitignore  LICENSE  README.md  app.py  export_commit_draft_clone.py  pyproject.toml
src/sga_splitter/: __init__.py  cli.py  core.py  detect.py  exporters.py  io_utils.py  logging_utils.py
tests/: __init__.py  test_detect.py  test_multi_sheet.py  test_split_clone.py  test_split_fast.py
