[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sga-splitter"
version = "0.1.0"
description = "CLI tool to split Excel workbook SG&A Summary Sheet by Department/Project"
authors = [{name = "SGA Splitter", email = "noreply@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "xlsxwriter>=3.1.0",
    "typer[all]>=0.9.0",
    "python-slugify>=8.0.0",
    "rich>=13.0.0",
]
keywords = ["excel", "xlsx", "split", "sga", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Spreadsheet",
]

[project.urls]
Homepage = "https://github.com/example/sga-splitter"
Repository = "https://github.com/example/sga-splitter"
Issues = "https://github.com/example/sga-splitter/issues"

[project.scripts]
sga-split = "sga_splitter.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/sga_splitter"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true